# starwars2

./: .env  .gitignore  README.md  configtest.py  main.py  pyproject.toml
auth/: routers.py  serializers.py  tests.py  viewsets.py
core/: models.py  routers.py  serializers.py  tests.py  viewsets.py
core/management/commands/: starwars_data.py
core/migrations/: 0001_initial.py  0002_remove_vehicle_pilots_vehicle_pilots.py  0003_remove_vehicle_pilots_vehicle_pilots.py  0004_people_movies.py  0005_remove_people_movies.py
fixtures/: user.py
services/: films_services.py  people_services.py
starwars/: settings.py  urls.py
