[project]
name = "starwars"
version = "0.1.0"
description = "Star Wars API to read, search and filter data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.10",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
